Fixed overflowing title in reference cards (#3843)

--- a/src/stylesheets/modules/field-editors/link/entity-link.styl
+++ b/src/stylesheets/modules/field-editors/link/entity-link.styl
@@ -178,6 +178,7 @@
 }
 
 .ReferenceCard__title {
+  word-break: break-all;
   font-weight: bold;
   color: $colors.text-dark;
 
